# BlazingBoard

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
.github/workflow/: docker_build.yml
.github/workflows/: docker-build.yml  docker_build.yml  gcp-deploy.yml
blazing_board/: .env.example  .gitignore  Cargo.toml  Dioxus.toml  README.md
blazing_board/assets/: main.css
blazing_board/assets/texts/: 01.txt
blazing_board/src/: auth.rs  backend.rs  gamification.rs  main.rs  models.rs
blazing_board/src/components/: mod.rs
blazing_board/src/components/avatar/: component.rs
content_updater/: Cargo.toml  Dockerfile
content_updater/src/: main.rs
