[package]
name = "blazing_board"
version = "0.1.0"
authors = ["William Droz <william.droz.ch@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.0"
dioxus = { version = "0.6.2", features = ["fullstack"] }
firestore = { version = "0.44.0", optional = true}
dotenvy = { version = "0.15.7", optional = true}
chrono = { version = "0.4.39", features = ["serde"] }
jiff = { version = "0.1.19", features = ["js"] }
serde = { version = "1.0.217"}
tokio = { version = "1.43", optional = true }
futures = { version = "0.3", optional = true }
wasm-bindgen = "0.2.99"


[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:firestore", "dep:dotenvy", "dep:futures", "dep:tokio"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
