[package]
name = "blazing_board"
version = "0.1.0"
authors = ["William Droz <william.droz.ch@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.2"
dioxus = { version = "0.7.9", features = ["fullstack"] }
axum = { version = "0.8.7", optional = true }
firestore = { version = "=0.47.0", optional = true }
dotenvy = { version = "0.15.7", optional = true }
chrono = { version = "0.4.42", features = ["serde"] }
jiff = { version = "0.2.16", features = ["js"] }
oauth2 = { version = "5.0.0", features = ["reqwest"], optional = true }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = { version = "0.10.9", optional = true }
tokio = { version = "1.48", optional = true }
futures = { version = "0.3", optional = true }
wasm-bindgen = "0.2.106"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }


[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:firestore",
    "dep:dotenvy",
    "dep:futures",
    "dep:oauth2",
    "dep:reqwest",
    "dep:sha2",
    "dep:tokio",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
